--- a/src/components/FlipBox/FlipBox.module.scss
+++ b/src/components/FlipBox/FlipBox.module.scss
@@ -2,28 +2,32 @@
 	width: 300px;
 	height: 350px;
 	perspective: 1000px;
-	&:hover .__inner {
+	// &:hover .--inner {
+	// 	transform: rotateY(180deg);
+	// }
+}
+
+.inner {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	transform-style: preserve-3d;
+	transition: transform 0.5s;
+	&.__turn {
 		transform: rotateY(180deg);
 	}
-	.__inner {
-		position: relative;
-		width: 100%;
-		height: 100%;
-		transform-style: preserve-3d;
-		transition: transform 0.5s;
-	}
+}
 
-	.__front,
-	.__back {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		background-color: #bf8c3f;
-		backface-visibility: hidden;
-	}
+.front,
+.back {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: #bf8c3f;
+	backface-visibility: hidden;
+}
 
-	.__back {
-		background-color: #298c93;
-		transform: rotateY(180deg);
-	}
+.back {
+	background-color: #298c93;
+	transform: rotateY(180deg);
 }
