--- a/src/App.scss
+++ b/src/App.scss
@@ -9,5 +9,7 @@
 	width: 100%;
 	height: 100vh;
 	background-color: rgba(73, 56, 56, 0.522);
-	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: hidden;
+	visibility: visible;
 }
