--- a/src/App.scss
+++ b/src/App.scss
@@ -7,9 +7,9 @@
 	display: grid;
 	place-items: center;
 	width: 100%;
-	height: 100vh;
+	min-height: 100vh;
 	background-color: rgba(73, 56, 56, 0.522);
-	overflow-x: hidden;
-	overflow-y: hidden;
-	visibility: visible;
+	// overflow-x: hidden;
+	overflow-y: scroll;
+	// visibility: visible;
 }
