--- a/src/components/BusinessCard/BusinessCard.module.scss
+++ b/src/components/BusinessCard/BusinessCard.module.scss
@@ -7,8 +7,8 @@ $bd: 1px solid black;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 	gap: 0.5rem;
-	overflow: hidden;
-	padding: 1rem;
+	// overflow: hidden;
+	padding: 0.5rem;
 }
 .businessCard {
 	box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.425);
