--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -4,8 +4,11 @@
 .home-page {
 	width: 100%;
 	height: 100vh;
-	background-color: rgb(225, 192, 149);
+	background-color: rgb(21, 19, 14);
 	@include fAround(column);
+	h1 {
+		color: white;
+	}
 }
 .content-menu {
 	width: 50%;
@@ -18,6 +21,26 @@
 			a {
 				text-decoration: none;
 				font-size: 1.2rem;
+			}
+		}
+	}
+}
+
+@media only screen and (max-width: 770px) {
+	.content-menu {
+		width: 70%;
+		height: 30vh;
+		background-color: yellowgreen;
+		@include centered;
+		ul {
+			li {
+				font-size: 1rem;
+				list-style: none;
+				line-height: 1.5;
+				a {
+					text-decoration: none;
+					font-size: 1rem;
+				}
 			}
 		}
 	}
