--- a/src/components/QuizBox/QuizBox.module.scss
+++ b/src/components/QuizBox/QuizBox.module.scss
@@ -1,48 +1,57 @@
+@use "../../css-files/variables" as *;
+@use "../../css-files/mixins" as *;
+
 .quizBox {
-    width: 45%;
-    height: 45vh;
-    border-radius: 5px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
-    background-color: rgba(0, 0, 0, 0.3);
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem;
-    gap: 1rem;
-    h1 {
-        margin: 2rem;
-        color: white;
-        letter-spacing: 1px;
-    }
-    h2 {
-        color: red;
-        span {
-            color: white;
-            font-size: 1rem;
-        }
-    }
+	width: 45%;
+	height: 45vh;
+	border-radius: 5px;
+	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+	background-color: rgba(0, 0, 0, 0.3);
+	display: flex;
+	justify-content: space-between;
+	padding: 1rem;
+	gap: 1rem;
+	h1 {
+		margin: 2rem;
+		color: white;
+		letter-spacing: 1px;
+	}
+	h2 {
+		color: red;
+		span {
+			color: white;
+			font-size: 1rem;
+		}
+	}
 }
 
 .btnWrap {
-    border-left: 2px solid white;
-    padding-left: 0.5rem;
-    display: flex;
-    justify-content: space-around;
-    align-items: left;
-    flex-direction: column;
-    button {
-        outline: none;
-        border: 3px solid rgba(68, 131, 226, 0.678);
-        border-radius: 5px;
-        background-color: transparent;
-        text-align: left;
-        padding: 0.5rem;
-        color: white;
-        &:hover {
-            background-color: rgba(0, 0, 0, 0.4);
-            color: limegreen;
-        }
-        &:active {
-            transform: scale(0.97);
-        }
-    }
+	border-left: 2px solid white;
+	padding-left: 0.5rem;
+	display: flex;
+	justify-content: space-around;
+	align-items: left;
+	flex-direction: column;
+	button {
+		outline: none;
+		border: 3px solid rgba(68, 131, 226, 0.678);
+		border-radius: 5px;
+		background-color: transparent;
+		text-align: left;
+		padding: 0.5rem;
+		color: white;
+		&:hover {
+			background-color: rgba(0, 0, 0, 0.4);
+			color: limegreen;
+		}
+		&:active {
+			transform: scale(0.97);
+		}
+	}
+}
+
+.score_box {
+	width: 100%;
+	height: 100%;
+	@include centered;
 }
