--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -5,9 +5,9 @@
 	width: 100%;
 	height: 100vh;
 	background-color: rgb(21, 19, 14);
-	background-image: url('../../images/wheels.jpg');
+	background-image: url('../../images/wheels800.jpg');
 	background-size: cover;
-	background-position: center;
+	background-position: center center;
 	// @include fCenter(row);
 	display: flex;
 	justify-content: flex-end;
