--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -26,6 +26,12 @@
 		&:hover {
 			color: #ecece6;
 		}
+		&:focus {
+			background-color: rgba(255, 255, 255, 0.637);
+			border: none;
+			outline: none;
+			padding: 2px 5px;
+		}
 	}
 }
 
