--- a/src/css-files/_mixins.scss
+++ b/src/css-files/_mixins.scss
@@ -111,3 +111,9 @@
 	top: 50%;
 	transform: translate(-50%, -50%);
 }
+
+@mixin circle($unit) {
+	width: $unit;
+	height: $unit;
+	border-radius: 50%;
+}
