--- a/src/App.scss
+++ b/src/App.scss
@@ -4,8 +4,10 @@
 	box-sizing: border-box;
 }
 .App {
-	display: grid;
-	place-items: center;
+	// display: grid;
+	// place-items: center;
+	margin: auto;
+	padding-top: 6vh;
 	width: 100%;
 	min-height: 100vh;
 	background-color: rgba(73, 56, 56, 0.522);
