--- a/src/css-files/_mixins.scss
+++ b/src/css-files/_mixins.scss
@@ -9,7 +9,7 @@
 	justify-content: center; //child is flex: 1 1 <baseWidth>   or 0 1 <baseWidth> stand for flexgrow, flexshrink, and flex-basis
 }
 
-@mixin sideBar {
+@mixin SideBarSays {
 	display: grid;
 	grid-template-columns: minmax(150px, 25%), 1fr;
 }
