--- a/src/App.scss
+++ b/src/App.scss
@@ -4,14 +4,9 @@
 	box-sizing: border-box;
 }
 .App {
-	// display: grid;
-	// place-items: center;
-	margin: auto;
-	padding-top: 6vh;
+	display: grid;
+	place-items: center;
 	width: 100%;
-	min-height: 100vh;
+	height: 100vh;
 	background-color: rgba(73, 56, 56, 0.522);
-	// overflow-x: hidden;
-	overflow-y: scroll;
-	// visibility: visible;
 }
