--- a/src/components/Quiz/Quiz.module.scss
+++ b/src/components/Quiz/Quiz.module.scss
@@ -1,8 +1,9 @@
 .quiz_container {
-    width: 100%;
-    height: 100vh;
-    background-color: lightblue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	width: 100%;
+	height: 100vh;
+	background-color: lightblue;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
 }
