--- a/src/components/GradientText/GradientText.module.scss
+++ b/src/components/GradientText/GradientText.module.scss
@@ -1,7 +1,7 @@
 @use "../../css-files/mixins" as *;
 @use "../../css-files/variables" as *;
 
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap");
 
 .box {
 	width: 100%;
@@ -15,7 +15,7 @@
 		-webkit-text-fill-color: transparent;
 		font-size: 10rem;
 		font-weight: bolder;
-		font-family: 'Source Sans Pro', sans-serif;
+		font-family: "Source Sans Pro", sans-serif;
 		text-transform: uppercase;
 		&:hover {
 			background: linear-gradient(white 35%, black);
